--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -13232,7 +13232,12 @@ ion-side-menu#side-menu {
 .popover-backdrop.active {
   z-index: 11; }
   .popover-backdrop.active .popover-wrapper .popover .list .item {
-    cursor: pointer; }
+    border: 0px solid;
+    cursor: pointer;
+    background: transparent; }
+  .popover-backdrop.active .popover-wrapper .popover .list .delimited {
+    box-shadow: inset 0px -1px 0px #ddd;
+    display: block; }
 
 .leaflet-bottom .leaflet-control {
   position: relative;
